# timepiece

./: Cargo.toml  README.md  make-release.sh
.github/workflows/: manual-release.yml  release.yml
src/: clock.rs  common.rs  main.rs  parse.rs  print.rs  stopwatch.rs  timer.rs
src/format/: dur.rs  mod.rs  time.rs
