[package]
name = "timepiece"
version = "0.3.0"
edition = "2021"

description = "A command-line all-purpose timepiece"
repository = "https://github.com/kyllingene/timepiece"
authors = ["Kyllingene"]
license = "MIT"

[dependencies]
chrono = "0.4"
console = "0.15.5"

[[bin]]
name = "tp"
path = "src/main.rs"
