[package]
name = "timepiece"
version = "0.7.4"
edition = "2021"

description = "A command-line all-purpose timepiece"
repository = "https://github.com/kyllingene/timepiece"

categories = ["date-and-time"]
keywords = ["stopwatch", "alarm", "time", "command-line", "clock"]

authors = ["Kyllingene"]
license = "MIT"

[dependencies]
atty = "0.2"
chrono = "0.4"
crossterm = "0.26"
notify-rust = { version = "4", optional = true }

[features]
default = []
notify = ["dep:notify-rust"]

[[bin]]
name = "tp"
path = "src/main.rs"
